# spark-connect-alchemy

./: .gitignore  pyproject.toml  setup.cfg  show.py
scsql/: dbapi.py  exceptions.py  sqlalchemy.py
sqlalchemy_scsql/: __init__.py  base.py  requirements.py
sqlalchemy_scsql/dbapi/: constans.py  dbapi.py
sqlalchemy_scsql/dialect/: __init__.py  base.py
test/: conftest.py
