[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scsql"]


[project]
name = "scsql"
version = "0.0.1"
dependencies = [
    "pyspark[connect]",
    "urllib3>=2.2.3",
    "databricks-sql-connector>=3.4.0",
]
requires-python = ">=3.9"
authors = [
  {name = "Arsen Gumin", email = "gumin@live.ru"},
]
maintainers = [
  {name = "Arsen Gumin", email = "gumin@live.ru"},
]
description = "Python DB API implementation for apache spark connect clusters."
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["spark-connect", "apache", "spark", "dbapi", "python", "sqlalchemy"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]


[project.urls]
Homepage = "https://github.com/aagumin/spark-connect-alchemy"
Documentation = "https://github.com/aagumin/spark-connect-alchemy"
Repository = "https://github.com/aagumin/spark-connect-alchemy.git"
"Bug Tracker" = "https://github.com/aagumin/spark-connect-alchemy/issues"
Changelog = "https://github.com/aagumin/spark-connect-alchemy/blob/master/CHANGELOG.md"
