[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sqlalchemy_scsql"]


[project]
name = "sqlalchemy_scsql"
version = "0.0.1"
dependencies = [
    "pyspark[connect]",
    "urllib3>=2.2.3",
    "sqlalchemy<2.0",
]
requires-python = ">=3.9"
authors = [
  {name = "Arsen Gumin", email = "gumin@live.ru"},
]
maintainers = [
  {name = "Arsen Gumin", email = "gumin@live.ru"},
]
description = "Python DB API implementation for apache spark connect clusters."
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["spark-connect", "apache", "spark", "dbapi", "python", "sqlalchemy"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]


[project.urls]
Homepage = "https://github.com/aagumin/spark-connect-alchemy"
Documentation = "https://github.com/aagumin/spark-connect-alchemy"
Repository = "https://github.com/aagumin/spark-connect-alchemy.git"
"Bug Tracker" = "https://github.com/aagumin/spark-connect-alchemy/issues"
Changelog = "https://github.com/aagumin/spark-connect-alchemy/blob/master/CHANGELOG.md"


[project.sqlalchemy.dialects]
access.pyodbc = "sqlalchemy_scsql:SparkConnectDialect"

[project.entry-points."sqlalchemy.dialects"]
sc = 'sqlalchemy_scsql:SparkConnectDialect'

[tool.pytest]
addopts=" --tb native -v -r fxX --maxfail=25 -p no:warnings"
python_files="test/*test_*.py"

[db]
default="access+pyodbc://admin@access_test"
sqlite="sqlite:///:memory:"

[sqla_testing]
requirement_cls="sqlalchemy_scsql.requirements:Requirements"
profile_file="test/profiles.txt"

